Update static references for correctness

--- a/partner_feeds/static/partner_feeds/css/select-feed.css
+++ b/partner_feeds/static/partner_feeds/css/select-feed.css
@@ -174,7 +174,7 @@
     height: 20px;
 
     cursor: pointer;
-    background-image: url(/static/grappelli/images/icons-s96d5c23000.png);
+    background-image: url(../../grappelli/images/icons-s0e29227ce9.png);
     background-position: 0 -2871px;
 }
 .feeds-selected-remove:hover
